<?xml version="1.0" encoding="utf-8"?>
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="3" >
 
        <TextView
            android:id="@+id/wellIDText"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_gravity="left"
            android:layout_row="1"
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:text="@string/wellID" />
 
        <TextView
            android:id="@+id/wellIDValue"
            android:layout_column="2"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:layout_row="1"
            android:text=""
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/flowRateText"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_gravity="left"
            android:layout_row="3"
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:text="@string/flowRate" />
 
        <TextView
            android:id="@+id/flowRateValue"
            android:layout_column="2"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:layout_row="3"
            android:text=""
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 
        <TextView
            android:id="@+id/oilTankLevelText"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_gravity="left"
            android:layout_row="5"
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:text="@string/oilTankLevel" />
 
        <TextView
            android:id="@+id/oilTankLevelValue"
            android:layout_column="2"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:layout_row="5"
            android:text=""
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 
        <TextView
            android:id="@+id/waterTankLevelText"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_gravity="left"
            android:layout_row="7"
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:text="@string/waterTankLevel" />
 
        <TextView
            android:id="@+id/waterTankLevelValue"
            android:layout_column="2"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:layout_row="7"
            android:text=""
            android:textSize="30sp"
            android:textColor="#ffff00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
 
        <Space
            android:layout_width="21dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />
 
        <Space
            android:layout_width="1dp"
            android:layout_height="21dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />
 
        <Space
            android:layout_width="64dp"
            android:layout_height="1dp"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />
 
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2" />
 
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4" />
        
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6" />
        
    </GridLayout>